--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body
     class="bg-gray-900 text-white bg-cover bg-center bg-no-repeat bg-fixed overflow-y-auto transition-all duration-500 ease-in-out">
 
-    <div class="min-h-screen w-full max-w-7xl m-auto cursor-default">
+    <div class="min-h-screen max-w-[120rem] m-auto cursor-default">
 
         <div id="loading-overlay"
             class="fixed inset-0 bg-gray-900 opacity-80 flex-col gap-y-3 items-center justify-center z-50 hidden ">
@@ -40,7 +40,8 @@
             </div>
         </dialog>
 
-        <header class="w-full flex flex-col md:flex-row items-center justify-between gap-4 p-4 md:p-8 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
+        <header
+            class="flex flex-col md:flex-row items-center justify-between gap-4 p-6 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
             <h1 class="flex-shrink-0 text-2xl font-bold">🌤️ Weather App</h1>
 
             <div class="w-full md:w-auto md:place-items-end">
@@ -48,7 +49,7 @@
 
                     <div class="relative w-full md:w-[40vw] lg:max-w-[510px]">
                         <input type="search" name="city-input" id="city-input" placeholder="Search for any city..."
-                            class="w-full rounded-full border border-gray-600 bg-white/30 px-4 py-2 focus:outline-none placeholder-gray-300">
+                            class="w-full rounded-full border border-gray-600 bg-white/30 px-4 py-2.5 focus:outline-none placeholder-gray-300">
 
                         <!-- Suggestion box aligned with input -->
                         <div id="suggestion-box"
@@ -75,27 +76,28 @@
             </div>
         </header>
 
-        <main class="w-full grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-8 p-4 md:p-8 items-center">
-            <div class="lg:col-span-2 card rounded-3xl">
-                <div
-                    class="relative flex flex-col sm:flex-row justify-center items-center  p-6 md:p-8 shadow-2xl text-shadow-[2px_2px_5px_rgb(0,0,0,0.4)]">
-                    <div class="text-center sm:text-left mt-5 sm:mt-0">
-                        <h2 id="cityName" class="text-3xl sm:text-4xl md:text-5xl">City Name</h2>
-                        <p id="currentDate" class="text-base sm:text-lg text-gray-300">
-                            Monday, September 07
-                        </p>
-                        <p id="currentTemp" class="text-6xl sm:text-7xl md:text-8xl font-bold mt-2 sm:mt-4">
-                            0 ℃
-                        </p>
-                        <p id="currentWeatherCondition" class="text-xl sm:text-2xl mt-2">
-                            Weather
-                        </p>
-                    </div>
+        <section class="md:px-20">
+            <main class="grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-8 p-4 md:p-8 items-center">
+                <div class="lg:col-span-2 card rounded-3xl">
+                    <div
+                        class="relative flex flex-col sm:flex-row justify-center items-center  p-6 md:p-8 shadow-2xl text-shadow-[4px_4px_6px_rgb(0,0,0,0.5)]">
+                        <div class="text-center sm:text-left mt-5 sm:mt-0">
+                            <h2 id="cityName" class="text-3xl sm:text-4xl md:text-5xl">City Name</h2>
+                            <p id="currentDate" class="text-base sm:text-lg text-gray-300">
+                                Monday, September 07
+                            </p>
+                            <p id="currentTemp" class="text-6xl sm:text-7xl md:text-8xl font-bold mt-2 sm:mt-4">
+                                0 ℃
+                            </p>
+                            <p id="currentWeatherCondition" class="text-xl sm:text-2xl mt-2">
+                                Weather
+                            </p>
+                        </div>
 
-                    <img src="" alt="Weather icon" id="currentWeather-icon" class="w-32 sm:w-48 md:w-64 aspect-square">
+                        <img src="" alt="Weather icon" id="currentWeather-icon"
+                            class="w-32 sm:w-48 md:w-64 aspect-square">
 
-                    <div id="toggleDegreeBtn" class="absolute top-3 right-3">
-                        <div class="flex items-center rounded-full p-0.5 w-18 sm:w-24 bg-white/20">
+                        <div id="toggleDegreeBtn" class="absolute top-3 right-3 flex rounded-full p-1 w-18 sm:w-24 bg-white/20">
                             <button id="celsius-btn" class="toggle-btn active">
                                 °C
                             </button>
@@ -104,99 +106,100 @@
                             </button>
                         </div>
                     </div>
-                </div>
 
-                <div id="warningSection" class=>
-                    <p id="warning-description">Loading warning description ...</p>
-                </div>
-            </div>
-
-
-            <div class="p-6 rounded-2xl backdrop-blur-xl flex flex-col gap-y-5 card ">
-                <div class="grid grid-cols-2 gap-6 text-center border-b border-white/20 pb-5">
-                    <div>
-                        <p class="text-gray-300 text-sm">Sunrise</p>
-                        <p id="sunriseTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
-                    </div>
-                    <div>
-                        <p class="text-gray-300 text-sm">Sunset</p>
-                        <p id="sunsetTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                    <div id="warningSection" class=>
+                        <p id="warning-description">Loading warning description ...</p>
                     </div>
                 </div>
 
-                <div class="grid grid-1 sm:grid-cols-6 lg:grid-cols-1 gap-y-4 text-base lg:text-lg">
-                    <!-- Weather Details -->
-                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
-                        <div class="flex sm:flex-col lg:flex-row items-center gap-2">
-                            <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
-                            <p class="text-slate-200">Humidity</p>
+
+                <div class="p-6 rounded-2xl backdrop-blur-xl flex flex-col gap-y-5 card ">
+                    <div class="grid grid-cols-2 gap-6 text-center border-b border-white/20 pb-5">
+                        <div>
+                            <p class="text-gray-300 text-sm">Sunrise</p>
+                            <p id="sunriseTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
                         </div>
-                        <span id="humidity" class="text-blue-400">--%</span>
+                        <div>
+                            <p class="text-gray-300 text-sm">Sunset</p>
+                            <p id="sunsetTime" class="font-bold text-xl sm:text-2xl">-----/---</p>
+                        </div>
                     </div>
 
-                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
-                        <div class="flex sm:flex-col lg:flex-row items-center gap-2">
-                            <img src="./assets/icons/wind.svg" alt="Wind speed icon" class="w-6 h-6">
-                            <p class="text-slate-200">Wind</p>
+                    <div class="grid grid-1 sm:grid-cols-6 lg:grid-cols-1 gap-y-4 text-base lg:text-lg">
+                        <!-- Weather Details -->
+                        <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                            <div class="flex sm:flex-col lg:flex-row items-center gap-2">
+                                <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
+                                <p class="text-slate-200">Humidity</p>
+                            </div>
+                            <span id="humidity" class="text-blue-400">--%</span>
                         </div>
-                        <span id="windSpeed">--km/h</span>
-                    </div>
 
-                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
-                        <div class="flex sm:flex-col lg:flex-row items-center gap-2">
-                            <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
-                            <p class="text-slate-200">Feels Like</p>
+                        <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                            <div class="flex sm:flex-col lg:flex-row items-center gap-2">
+                                <img src="./assets/icons/wind.svg" alt="Wind speed icon" class="w-6 h-6">
+                                <p class="text-slate-200">Wind</p>
+                            </div>
+                            <span id="windSpeed">--km/h</span>
                         </div>
-                        <span id="feelsLike" class="text-yellow-400">--℃</span>
-                    </div>
 
-                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
-                        <div class="flex sm:flex-col lg:flex-row items-center gap-2">
-                            <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
-                            <p class="text-slate-200">Pressure</p>
+                        <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                            <div class="flex sm:flex-col lg:flex-row items-center gap-2">
+                                <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
+                                <p class="text-slate-200">Feels Like</p>
+                            </div>
+                            <span id="feelsLike" class="text-yellow-300">--℃</span>
                         </div>
-                        <span id="pressure" class="text-red-400">--hPa</span>
-                    </div>
 
-                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
-                        <div class="flex sm:flex-col lg:flex-row items-center gap-2">
-                            <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
-                            <p class="text-slate-200">Visibility</p>
+                        <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                            <div class="flex sm:flex-col lg:flex-row items-center gap-2">
+                                <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
+                                <p class="text-slate-200">Pressure</p>
+                            </div>
+                            <span id="pressure" class="text-red-400">--hPa</span>
                         </div>
-                        <span id="visibility" class="text-green-400">--km</span>
-                    </div>
 
-                    <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
-                        <div class="flex sm:flex-col lg:flex-row items-center gap-2">
-                            <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
-                            <p class="text-slate-200">Air Quality</p>
+                        <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                            <div class="flex sm:flex-col lg:flex-row items-center gap-2">
+                                <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
+                                <p class="text-slate-200">Visibility</p>
+                            </div>
+                            <span id="visibility" class="text-green-300">--km</span>
                         </div>
-                        <span id="airQuality">--</span>
+
+                        <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
+                            <div class="flex sm:flex-col lg:flex-row items-center gap-2">
+                                <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
+                                <p class="text-slate-200">Air Quality</p>
+                            </div>
+                            <span id="airQuality">--</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </main>
+            </main>
 
-        <section class="w-full p-4 md:p-8 mt-5">
-            <div>
-                <h3 class="text-3xl font-bold mb-4 text-shadow">
-                    Next 5-Days Forecast
-                </h3>
-                <div id="forecast-container" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-6 lg:gap-4">
+            <section class="p-4 md:p-8 mt-5">
+                <div>
+                    <h3 class="text-3xl font-bold mb-4 text-shadow">
+                        Next 5-Days Forecast
+                    </h3>
+                    <div id="forecast-container" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-6 lg:gap-4">
+                    </div>
                 </div>
-            </div>
+            </section>
+
+            <section id="recentlySearchedContainer" class="p-4 md:p-8 mt-5 cursor-pointer">
+                <div>
+                    <h3 class="text-3xl font-bold mb-4 text-shadow">
+                        Recently Seached Cities
+                    </h3>
+                    <div id="searchedCity-container"
+                        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-5">
+                    </div>
+                </div>
+            </section>
         </section>
 
-        <section id="recentlySearchedContainer" class="w-full p-4 md:p-8 mt-5 cursor-pointer">
-            <div>
-                <h3 class="text-3xl font-bold mb-4 text-shadow">
-                    Recently Seached Cities
-                </h3>
-                <div id="searchedCity-container"
-                    class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-5">
-                </div>
-            </div>
-        </section>
     </div>
 </body>
 
