--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <script src="./script.js" defer></script>
 </head>
 
-<body
-    class="bg-gray-900 text-white bg-cover bg-center bg-no-repeat bg-fixed overflow-y-auto transition-all duration-500 ease-in-out">
+<body class="bg-black/20 text-white bg-cover bg-center bg-fixed bg-blend-darken bg-no-repeat overflow-y-auto transition-all duration-500 ease-in-out">
 
     <div class="min-h-screen max-w-[120rem] m-auto cursor-default">
 
@@ -41,7 +40,7 @@
         </dialog>
 
         <header
-            class="flex flex-col md:flex-row items-center justify-between gap-4 p-6 backdrop-blur-xl sticky top-0 bg-black/30 z-20">
+            class="flex flex-col md:flex-row items-center justify-between gap-4 p-6 backdrop-blur-lg sticky top-0 bg-black/30 z-20">
             <h1 class="flex-shrink-0 text-2xl font-bold">🌤️ Weather App</h1>
 
             <div class="w-full md:w-auto md:place-items-end">
@@ -49,7 +48,7 @@
 
                     <div class="relative w-full md:w-[40vw] lg:max-w-[510px]">
                         <input type="search" name="city-input" id="city-input" placeholder="Search for any city..."
-                            class="w-full rounded-full border border-gray-600 bg-white/30 px-4 py-2.5 focus:outline-none placeholder-gray-300">
+                            class="w-full rounded-full border border-gray-600 bg-white/30 px-5 py-2.5 focus:outline-none placeholder-gray-300">
 
                         <!-- Suggestion box aligned with input -->
                         <div id="suggestion-box"
@@ -76,9 +75,9 @@
             </div>
         </header>
 
-        <section class="md:px-20">
+        <section class="lg:px-20 ">
             <main class="grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-8 p-4 md:p-8 items-center">
-                <div class="lg:col-span-2 card rounded-3xl">
+                <div class="lg:col-span-2 backdrop-blur-xs rounded-3xl card ">
                     <div
                         class="relative flex flex-col sm:flex-row justify-center items-center  p-6 md:p-8 shadow-2xl text-shadow-[4px_4px_6px_rgb(0,0,0,0.5)]">
                         <div class="text-center sm:text-left mt-5 sm:mt-0">
@@ -107,13 +106,13 @@
                         </div>
                     </div>
 
-                    <div id="warningSection" class=>
+                    <div id="warningSection">
                         <p id="warning-description">Loading warning description ...</p>
                     </div>
                 </div>
 
 
-                <div class="p-6 rounded-2xl backdrop-blur-xl flex flex-col gap-y-5 card ">
+                <div class="p-6 rounded-2xl backdrop-blur-lg flex flex-col gap-y-5 card ">
                     <div class="grid grid-cols-2 gap-6 text-center border-b border-white/20 pb-5">
                         <div>
                             <p class="text-gray-300 text-sm">Sunrise</p>
@@ -132,7 +131,7 @@
                                 <img src="./assets/icons/humidity.svg" alt="Humidity icon" class="w-6 h-6">
                                 <p class="text-slate-200">Humidity</p>
                             </div>
-                            <span id="humidity" class="text-blue-400">--%</span>
+                            <span id="humidity">--%</span>
                         </div>
 
                         <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
@@ -148,7 +147,7 @@
                                 <img src="./assets/icons/feels-like.svg" alt="Feels like icon" class="w-6 h-6">
                                 <p class="text-slate-200">Feels Like</p>
                             </div>
-                            <span id="feelsLike" class="text-yellow-300">--℃</span>
+                            <span id="feelsLike">--℃</span>
                         </div>
 
                         <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
@@ -156,7 +155,7 @@
                                 <img src="./assets/icons/pressure.svg" alt="Pressure icon" class="w-6 h-6">
                                 <p class="text-slate-200">Pressure</p>
                             </div>
-                            <span id="pressure" class="text-red-400">--hPa</span>
+                            <span id="pressure">--hPa</span>
                         </div>
 
                         <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
@@ -164,7 +163,7 @@
                                 <img src="./assets/icons/visibility.svg" alt="Visibility icon" class="w-6 h-6">
                                 <p class="text-slate-200">Visibility</p>
                             </div>
-                            <span id="visibility" class="text-green-300">--km</span>
+                            <span id="visibility">--km</span>
                         </div>
 
                         <div class="flex flex-row sm:flex-col lg:flex-row gap-y-1 items-center justify-between">
@@ -172,7 +171,7 @@
                                 <img src="./assets/icons/air-quality.svg" alt="Air quality icon" class="w-6 h-6">
                                 <p class="text-slate-200">Air Quality</p>
                             </div>
-                            <span id="airQuality">--</span>
+                            <span id="airQuality" class="font-bold">--</span>
                         </div>
                     </div>
                 </div>
@@ -183,7 +182,7 @@
                     <h3 class="text-3xl font-bold mb-4 text-shadow">
                         Next 5-Days Forecast
                     </h3>
-                    <div id="forecast-container" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-6 lg:gap-4">
+                    <div id="forecast-container" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-6 lg:gap-4 font-semibold">
                     </div>
                 </div>
             </section>
