--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body
-    class="bg-black/20 text-white bg-cover bg-center bg-fixed bg-blend-darken bg-no-repeat overflow-y-auto transition-all duration-500 ease-in-out">
+    class="bg-black/20 text-white bg-cover bg-center bg-fixed bg-blend-darken bg-no-repeat transition-all duration-500 ease-in-out">
 
     <!-- Main container -->
     <div class="min-h-screen max-w-[120rem] m-auto">
@@ -36,8 +36,8 @@
         <!-- Error Modal (shown when API fetch fails) -->
         <dialog id="error-modal" class="border m-auto rounded-xl">
             <div class="bg-red-600 border border-red-400 rounded-lg shadow-xl p-6 text-center text-white">
-                <h3 class="text-2xl font-bold mb-4">Oops! Something went wrong</h3>
-                <p id="errorMessage" class="mb-6">Could not fetch weather data</p>
+                <h3 class="text-3xl font-bold mb-4">Oops! Something went wrong</h3>
+                <p id="errorMessage" class="mb-6 text-xl">Could not fetch weather data</p>
                 <button id="close-modalBtn" type="button"
                     class="px-5 py-1.5 bg-black/80 rounded-3xl hover:bg-gray-700 focus:outline-none">
                     Close
@@ -220,7 +220,7 @@
                         Recently Seached Cities
                     </h3>
                     <div id="searchedCity-container"
-                        class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 xl:grid-cols-6 gap-5">
+                        class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-5">
                     </div>
                 </div>
             </section>
